@startuml
skinparam classAttributeIconSize 0
left to right direction

class Parameter {
  -code
  -name
  -description
  -category
}

class ParameterStore{
    +createParameter(code,name,description,category)
    +validateParameter(pr)
    +saveParameter(pr)
    +addParameter(pr)
    +getParameter()
}



class ParameterCategoryStore{
    +createParameterCategory(code,name)
    +validateParameterCategory(pc)
    +saveParameterCategory(pc)
    +addParameterCategory(pc)
    +getParameterCategory()
    +getCategories()
}

class Company {
  -chemicalLab
  +getParameterCategoryStore()
  +getParameterStore()
}

class CreateParameterUI{}

class CreateParameterController{
    +createParameter(code,name)
    +saveParameter()
    +List<CategoriesDTO> getListOfCategories()
}

class CategoriesMapper{
    +List<CategoriesDTO> toDTO(List<Categories> list)
    +CategoriesDTO toDTO(Categories obj)
}




CreateParameterUI ..> CreateParameterController
CreateParameterController ..> Company
CreateParameterController ..> Parameter
CreateParameterController ..> ParameterStore
CreateParameterController ..> ParameterCategoryStore
CreateParameterController ..> CategoriesMapper
CategoriesMapper ..> ParameterCategoryStore
Company "1" --> "1" ParameterCategoryStore : uses
Company "1" --> "1" ParameterStore : uses
ParameterStore "1" --> "*" Parameter : capable of analysing


@enduml